--- a/app/assets/stylesheets/scss/_front.scss
+++ b/app/assets/stylesheets/scss/_front.scss
@@ -39,6 +39,7 @@ $comp: black;
   text-align: center;
   h1{
     font-size: 5rem;
+    font-family: 'Lobster', cursive;
     position: absolute;
     margin-left: -10rem;
     left: 50%;
@@ -53,8 +54,8 @@ $comp: black;
     width: 24rem;
     display: block;
     #room_name{
-      color: $bckgrnd;
-      padding: 6px 0;
+      color: $comp;
+      padding: 0.4rem 0;
       text-align: center;
       border: 3px solid $comp;
       width: 65%;
@@ -64,8 +65,7 @@ $comp: black;
       color: $comp;
       border: 3px solid $comp;
       background-color: $bckgrnd;
-      padding-top: 0.4rem;
-      padding-bottom: 0.4rem;
+      padding: 0.5rem 0;
       width: 30%;
     }
   }
